2020年10月12日 3時53分

--- a/lang/index.json
+++ b/lang/index.json
@@ -1,12 +1,12 @@
 {
     "ja": {
-        "label1": "あああ",
-        "label2": "いい",
+        "label1": "ああああ",
+        "label2": "いいい",
         "label3": "う"
     },
     "en": {
-        "label1": "aaa",
-        "label2": "ii",
+        "label1": "aaaa",
+        "label2": "iii",
         "lanel3": "u"
     }
 }
