--- a/lang/index.json
+++ b/lang/index.json
@@ -1,26 +1,12 @@
-<<<<<<< HEAD
 {
     "ja": {
         "label1": "ああああ",
         "label2": "いいい",
-        "label3": "う"
+        "label3": "うう"
     },
     "en": {
         "label1": "aaaa",
         "label2": "iii",
-        "lanel3": "u"
+        "lanel3": "uu"
     }
-=======
-{
-    "ja": {
-        "label1": "あああ",
-        "label2": "いい",
-        "label3": "う"
-    },
-    "en": {
-        "label1": "aaa",
-        "label2": "ii",
-        "lanel3": "u"
-    }
->>>>>>> aa82d0f011fa211fa55d4f42203f47e55798ad78
 }
